Replace permission checks with roles and improve membership reporting
Persist license type on memberships, enrich PDF export with breakdown and approved totals, recalculate amount when options change, and migrate admin authorization to role-based access.